--- a/Editor/imgui.ini
+++ b/Editor/imgui.ini
@@ -1,6 +1,6 @@
 [Window][Editor]
 Pos=0,0
-Size=1920,1009
+Size=1920,1061
 Collapsed=0
 
 [Window][Debug##Default]
@@ -10,56 +10,66 @@ Collapsed=0
 
 [Window][Scene Hierarchy]
 Pos=8,27
-Size=282,771
+Size=282,674
 Collapsed=0
 DockId=0x00000009,0
 
 [Window][Scene View]
 Pos=292,27
-Size=1465,771
+Size=1372,674
 Collapsed=0
 DockId=0x0000000A,0
 
 [Window][Profiler]
-Pos=1759,466
-Size=153,332
+Pos=1667,703
+Size=245,350
 Collapsed=0
 DockId=0x00000004,0
 
 [Window][Resources]
-Pos=8,800
-Size=308,201
+Pos=8,703
+Size=282,350
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][Inspector]
-Pos=1759,27
-Size=153,437
+Pos=1666,27
+Size=246,674
+Collapsed=0
+DockId=0x00000008,0
+
+[Window][Asset Browser]
+Pos=292,703
+Size=1373,350
+Collapsed=0
+DockId=0x00000003,1
+
+[Window][Console]
+Pos=292,703
+Size=1373,350
 Collapsed=0
 DockId=0x00000003,0
 
-[Window][Asset Browser]
-Pos=318,800
-Size=1594,201
+[Window][Fuse Hub]
+Pos=293,204
+Size=1042,412
 Collapsed=0
-DockId=0x00000006,0
 
-[Window][Console]
-Pos=318,800
-Size=1594,201
+[Window][##Controls]
+Pos=296,52
+Size=332,36
 Collapsed=0
-DockId=0x00000006,1
 
 [Docking][Data]
-DockSpace       ID=0x90F27762 Window=0xCB5DF48C Pos=8,27 Size=1904,974 Split=Y
-  DockNode      ID=0x00000001 Parent=0x90F27762 SizeRef=1904,771 Split=X
-    DockNode    ID=0x00000007 Parent=0x00000001 SizeRef=1749,771 Split=X
+DockSpace       ID=0x90F27762 Window=0xCB5DF48C Pos=8,27 Size=1904,1026 Split=Y
+  DockNode      ID=0x00000001 Parent=0x90F27762 SizeRef=1904,674 Split=X
+    DockNode    ID=0x00000007 Parent=0x00000001 SizeRef=1656,771 Split=X
       DockNode  ID=0x00000009 Parent=0x00000007 SizeRef=282,771 Selected=0x9A68760C
-      DockNode  ID=0x0000000A Parent=0x00000007 SizeRef=1465,771 CentralNode=1 Selected=0x71B61B7A
-    DockNode    ID=0x00000008 Parent=0x00000001 SizeRef=153,771 Split=Y Selected=0xF02CD328
-      DockNode  ID=0x00000003 Parent=0x00000008 SizeRef=157,437 Selected=0xF02CD328
-      DockNode  ID=0x00000004 Parent=0x00000008 SizeRef=157,332 Selected=0x0541D7F0
-  DockNode      ID=0x00000002 Parent=0x90F27762 SizeRef=1904,201 Split=X Selected=0xB04EBF39
+      DockNode  ID=0x0000000A Parent=0x00000007 SizeRef=1372,771 CentralNode=1 Selected=0x71B61B7A
+    DockNode    ID=0x00000008 Parent=0x00000001 SizeRef=246,771 Selected=0xF02CD328
+  DockNode      ID=0x00000002 Parent=0x90F27762 SizeRef=1904,350 Split=X Selected=0xB04EBF39
     DockNode    ID=0x00000005 Parent=0x00000002 SizeRef=282,201 Selected=0x6D97690D
-    DockNode    ID=0x00000006 Parent=0x00000002 SizeRef=1462,201 Selected=0xB04EBF39
+    DockNode    ID=0x00000006 Parent=0x00000002 SizeRef=1620,201 Split=X Selected=0xF9BEF62A
+      DockNode  ID=0x00000003 Parent=0x00000006 SizeRef=1373,201 Selected=0xB04EBF39
+      DockNode  ID=0x00000004 Parent=0x00000006 SizeRef=245,201 Selected=0x0541D7F0
 
