--- a/Editor/imgui.ini
+++ b/Editor/imgui.ini
@@ -10,43 +10,43 @@ Collapsed=0
 
 [Window][Scene Hierarchy]
 Pos=8,27
-Size=282,622
+Size=214,974
 Collapsed=0
 DockId=0x00000009,0
 
 [Window][Scene View]
-Pos=292,27
-Size=1372,622
+Pos=224,27
+Size=1477,622
 Collapsed=0
-DockId=0x0000000A,0
+DockId=0x00000007,0
 
 [Window][Profiler]
-Pos=1667,651
-Size=245,350
+Pos=1703,651
+Size=209,350
 Collapsed=0
 DockId=0x00000004,0
 
 [Window][Resources]
-Pos=8,651
-Size=282,350
+Pos=224,651
+Size=196,350
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][Inspector]
-Pos=1666,27
-Size=246,622
+Pos=1703,27
+Size=209,622
 Collapsed=0
 DockId=0x00000008,0
 
 [Window][Asset Browser]
-Pos=292,651
-Size=1373,350
+Pos=422,651
+Size=1279,350
 Collapsed=0
 DockId=0x00000003,1
 
 [Window][Console]
-Pos=292,651
-Size=1373,350
+Pos=422,651
+Size=1279,350
 Collapsed=0
 DockId=0x00000003,0
 
@@ -56,20 +56,25 @@ Size=1042,412
 Collapsed=0
 
 [Window][##Controls]
-Pos=296,52
+Pos=233,55
 Size=332,36
 Collapsed=0
 
+[Window][New Project]
+Pos=697,294
+Size=460,300
+Collapsed=0
+
 [Docking][Data]
-DockSpace       ID=0x90F27762 Window=0xCB5DF48C Pos=8,27 Size=1904,974 Split=Y
-  DockNode      ID=0x00000001 Parent=0x90F27762 SizeRef=1904,674 Split=X
-    DockNode    ID=0x00000007 Parent=0x00000001 SizeRef=1656,771 Split=X
-      DockNode  ID=0x00000009 Parent=0x00000007 SizeRef=282,771 Selected=0x9A68760C
-      DockNode  ID=0x0000000A Parent=0x00000007 SizeRef=1372,771 CentralNode=1 Selected=0x71B61B7A
-    DockNode    ID=0x00000008 Parent=0x00000001 SizeRef=246,771 Selected=0xF02CD328
-  DockNode      ID=0x00000002 Parent=0x90F27762 SizeRef=1904,350 Split=X Selected=0xB04EBF39
-    DockNode    ID=0x00000005 Parent=0x00000002 SizeRef=282,201 Selected=0x6D97690D
-    DockNode    ID=0x00000006 Parent=0x00000002 SizeRef=1620,201 Split=X Selected=0xF9BEF62A
-      DockNode  ID=0x00000003 Parent=0x00000006 SizeRef=1373,201 Selected=0xB04EBF39
-      DockNode  ID=0x00000004 Parent=0x00000006 SizeRef=245,201 Selected=0x0541D7F0
+DockSpace         ID=0x90F27762 Window=0xCB5DF48C Pos=8,27 Size=1904,974 Split=X
+  DockNode        ID=0x00000009 Parent=0x90F27762 SizeRef=214,1026 Selected=0x9A68760C
+  DockNode        ID=0x0000000A Parent=0x90F27762 SizeRef=1688,1026 Split=Y
+    DockNode      ID=0x00000001 Parent=0x0000000A SizeRef=1904,674 Split=X
+      DockNode    ID=0x00000007 Parent=0x00000001 SizeRef=1477,674 CentralNode=1 Selected=0x71B61B7A
+      DockNode    ID=0x00000008 Parent=0x00000001 SizeRef=209,674 Selected=0xF02CD328
+    DockNode      ID=0x00000002 Parent=0x0000000A SizeRef=1904,350 Split=X Selected=0xB04EBF39
+      DockNode    ID=0x00000005 Parent=0x00000002 SizeRef=196,201 Selected=0x6D97690D
+      DockNode    ID=0x00000006 Parent=0x00000002 SizeRef=1490,201 Split=X Selected=0xF9BEF62A
+        DockNode  ID=0x00000003 Parent=0x00000006 SizeRef=1279,201 Selected=0xF9BEF62A
+        DockNode  ID=0x00000004 Parent=0x00000006 SizeRef=209,201 Selected=0x0541D7F0
 
