--- a/Editor/imgui.ini
+++ b/Editor/imgui.ini
@@ -1,6 +1,6 @@
 [Window][Editor]
 Pos=0,0
-Size=1920,1009
+Size=1920,1055
 Collapsed=0
 
 [Window][Debug##Default]
@@ -10,42 +10,42 @@ Collapsed=0
 
 [Window][Scene Hierarchy]
 Pos=8,27
-Size=214,974
+Size=214,1020
 Collapsed=0
 DockId=0x00000009,0
 
 [Window][Scene View]
 Pos=224,27
-Size=1477,622
+Size=1477,668
 Collapsed=0
 DockId=0x00000007,0
 
 [Window][Profiler]
-Pos=1703,651
+Pos=1703,697
 Size=209,350
 Collapsed=0
 DockId=0x00000004,0
 
 [Window][Resources]
-Pos=224,651
+Pos=224,697
 Size=196,350
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][Inspector]
 Pos=1703,27
-Size=209,622
+Size=209,668
 Collapsed=0
 DockId=0x00000008,0
 
 [Window][Asset Browser]
-Pos=422,651
+Pos=422,697
 Size=1279,350
 Collapsed=0
 DockId=0x00000003,1
 
 [Window][Console]
-Pos=422,651
+Pos=422,697
 Size=1279,350
 Collapsed=0
 DockId=0x00000003,0
@@ -61,12 +61,12 @@ Size=332,36
 Collapsed=0
 
 [Window][New Project]
-Pos=697,294
-Size=460,300
+Pos=682,302
+Size=460,200
 Collapsed=0
 
 [Docking][Data]
-DockSpace         ID=0x90F27762 Window=0xCB5DF48C Pos=8,27 Size=1904,974 Split=X
+DockSpace         ID=0x90F27762 Window=0xCB5DF48C Pos=8,27 Size=1904,1020 Split=X
   DockNode        ID=0x00000009 Parent=0x90F27762 SizeRef=214,1026 Selected=0x9A68760C
   DockNode        ID=0x0000000A Parent=0x90F27762 SizeRef=1688,1026 Split=Y
     DockNode      ID=0x00000001 Parent=0x0000000A SizeRef=1904,674 Split=X
@@ -75,6 +75,6 @@ DockSpace         ID=0x90F27762 Window=0xCB5DF48C Pos=8,27 Size=1904,974 Split=X
     DockNode      ID=0x00000002 Parent=0x0000000A SizeRef=1904,350 Split=X Selected=0xB04EBF39
       DockNode    ID=0x00000005 Parent=0x00000002 SizeRef=196,201 Selected=0x6D97690D
       DockNode    ID=0x00000006 Parent=0x00000002 SizeRef=1490,201 Split=X Selected=0xF9BEF62A
-        DockNode  ID=0x00000003 Parent=0x00000006 SizeRef=1279,201 Selected=0xF9BEF62A
+        DockNode  ID=0x00000003 Parent=0x00000006 SizeRef=1279,201 Selected=0xB04EBF39
         DockNode  ID=0x00000004 Parent=0x00000006 SizeRef=209,201 Selected=0x0541D7F0
 
