--- a/Editor/imgui.ini
+++ b/Editor/imgui.ini
@@ -1,6 +1,6 @@
 [Window][Editor]
 Pos=0,0
-Size=1920,1055
+Size=1920,1009
 Collapsed=0
 
 [Window][Debug##Default]
@@ -10,45 +10,45 @@ Collapsed=0
 
 [Window][Scene Hierarchy]
 Pos=8,27
-Size=214,1020
+Size=214,974
 Collapsed=0
 DockId=0x00000009,0
 
 [Window][Scene View]
 Pos=224,27
-Size=1477,668
+Size=1477,628
 Collapsed=0
 DockId=0x00000007,0
 
 [Window][Profiler]
-Pos=1703,697
-Size=209,350
+Pos=1675,657
+Size=237,344
 Collapsed=0
 DockId=0x00000004,0
 
 [Window][Resources]
-Pos=224,697
-Size=196,350
+Pos=224,657
+Size=213,344
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][Inspector]
 Pos=1703,27
-Size=209,668
+Size=209,628
 Collapsed=0
 DockId=0x00000008,0
 
 [Window][Asset Browser]
-Pos=422,697
-Size=1279,350
+Pos=439,657
+Size=1234,344
 Collapsed=0
-DockId=0x00000003,1
+DockId=0x00000006,1
 
 [Window][Console]
-Pos=422,697
-Size=1279,350
+Pos=439,657
+Size=1234,344
 Collapsed=0
-DockId=0x00000003,0
+DockId=0x00000006,0
 
 [Window][Fuse Hub]
 Pos=293,204
@@ -61,20 +61,20 @@ Size=332,36
 Collapsed=0
 
 [Window][New Project]
-Pos=682,302
+Pos=692,312
 Size=460,200
 Collapsed=0
 
 [Docking][Data]
-DockSpace         ID=0x90F27762 Window=0xCB5DF48C Pos=8,27 Size=1904,1020 Split=X
+DockSpace         ID=0x90F27762 Window=0xCB5DF48C Pos=8,27 Size=1904,974 Split=X
   DockNode        ID=0x00000009 Parent=0x90F27762 SizeRef=214,1026 Selected=0x9A68760C
   DockNode        ID=0x0000000A Parent=0x90F27762 SizeRef=1688,1026 Split=Y
-    DockNode      ID=0x00000001 Parent=0x0000000A SizeRef=1904,674 Split=X
+    DockNode      ID=0x00000001 Parent=0x0000000A SizeRef=1904,628 Split=X
       DockNode    ID=0x00000007 Parent=0x00000001 SizeRef=1477,674 CentralNode=1 Selected=0x71B61B7A
       DockNode    ID=0x00000008 Parent=0x00000001 SizeRef=209,674 Selected=0xF02CD328
-    DockNode      ID=0x00000002 Parent=0x0000000A SizeRef=1904,350 Split=X Selected=0xB04EBF39
-      DockNode    ID=0x00000005 Parent=0x00000002 SizeRef=196,201 Selected=0x6D97690D
-      DockNode    ID=0x00000006 Parent=0x00000002 SizeRef=1490,201 Split=X Selected=0xF9BEF62A
-        DockNode  ID=0x00000003 Parent=0x00000006 SizeRef=1279,201 Selected=0xB04EBF39
-        DockNode  ID=0x00000004 Parent=0x00000006 SizeRef=209,201 Selected=0x0541D7F0
+    DockNode      ID=0x00000002 Parent=0x0000000A SizeRef=1904,344 Split=X Selected=0xB04EBF39
+      DockNode    ID=0x00000003 Parent=0x00000002 SizeRef=1279,201 Split=X Selected=0xB04EBF39
+        DockNode  ID=0x00000005 Parent=0x00000003 SizeRef=213,344 Selected=0x6D97690D
+        DockNode  ID=0x00000006 Parent=0x00000003 SizeRef=1234,344 Selected=0xB04EBF39
+      DockNode    ID=0x00000004 Parent=0x00000002 SizeRef=209,201 Selected=0x0541D7F0
 
