--- a/Editor/imgui.ini
+++ b/Editor/imgui.ini
@@ -1,6 +1,6 @@
 [Window][Editor]
 Pos=0,0
-Size=1920,1061
+Size=1920,991
 Collapsed=0
 
 [Window][Debug##Default]
@@ -10,45 +10,45 @@ Collapsed=0
 
 [Window][Scene Hierarchy]
 Pos=8,27
-Size=214,1026
+Size=284,956
 Collapsed=0
 DockId=0x00000009,0
 
 [Window][Scene View]
-Pos=224,27
-Size=1477,680
+Pos=294,27
+Size=1407,610
 Collapsed=0
 DockId=0x00000007,0
 
 [Window][Profiler]
-Pos=1703,709
+Pos=1703,639
 Size=209,344
 Collapsed=0
 DockId=0x00000004,0
 
 [Window][Resources]
-Pos=224,709
-Size=213,344
+Pos=294,639
+Size=195,344
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][Inspector]
 Pos=1703,27
-Size=209,680
+Size=209,610
 Collapsed=0
 DockId=0x00000008,0
 
 [Window][Asset Browser]
-Pos=439,709
-Size=1262,344
+Pos=491,639
+Size=602,344
 Collapsed=0
-DockId=0x00000006,1
+DockId=0x0000000B,0
 
 [Window][Console]
-Pos=439,709
-Size=1262,344
+Pos=1095,639
+Size=606,344
 Collapsed=0
-DockId=0x00000006,0
+DockId=0x0000000C,0
 
 [Window][Fuse Hub]
 Pos=293,204
@@ -56,7 +56,7 @@ Size=1042,412
 Collapsed=0
 
 [Window][##Controls]
-Pos=348,100
+Pos=376,78
 Size=132,47
 Collapsed=0
 
@@ -66,15 +66,17 @@ Size=460,200
 Collapsed=0
 
 [Docking][Data]
-DockSpace         ID=0x90F27762 Window=0xCB5DF48C Pos=8,27 Size=1904,1026 Split=X
-  DockNode        ID=0x00000009 Parent=0x90F27762 SizeRef=214,1026 Selected=0x9A68760C
-  DockNode        ID=0x0000000A Parent=0x90F27762 SizeRef=1688,1026 Split=Y
-    DockNode      ID=0x00000001 Parent=0x0000000A SizeRef=1904,628 Split=X
-      DockNode    ID=0x00000007 Parent=0x00000001 SizeRef=1477,674 CentralNode=1 Selected=0x71B61B7A
-      DockNode    ID=0x00000008 Parent=0x00000001 SizeRef=209,674 Selected=0xF02CD328
-    DockNode      ID=0x00000002 Parent=0x0000000A SizeRef=1904,344 Split=X Selected=0xB04EBF39
-      DockNode    ID=0x00000003 Parent=0x00000002 SizeRef=1477,201 Split=X Selected=0xB04EBF39
-        DockNode  ID=0x00000005 Parent=0x00000003 SizeRef=213,344 Selected=0x6D97690D
-        DockNode  ID=0x00000006 Parent=0x00000003 SizeRef=1262,344 Selected=0xB04EBF39
-      DockNode    ID=0x00000004 Parent=0x00000002 SizeRef=209,201 Selected=0x0541D7F0
+DockSpace           ID=0x90F27762 Window=0xCB5DF48C Pos=8,27 Size=1904,956 Split=X
+  DockNode          ID=0x00000009 Parent=0x90F27762 SizeRef=284,1026 Selected=0x9A68760C
+  DockNode          ID=0x0000000A Parent=0x90F27762 SizeRef=1618,1026 Split=Y
+    DockNode        ID=0x00000001 Parent=0x0000000A SizeRef=1904,628 Split=X
+      DockNode      ID=0x00000007 Parent=0x00000001 SizeRef=1407,674 CentralNode=1 Selected=0x71B61B7A
+      DockNode      ID=0x00000008 Parent=0x00000001 SizeRef=209,674 Selected=0xF02CD328
+    DockNode        ID=0x00000002 Parent=0x0000000A SizeRef=1904,344 Split=X Selected=0xB04EBF39
+      DockNode      ID=0x00000003 Parent=0x00000002 SizeRef=1407,201 Split=X Selected=0xB04EBF39
+        DockNode    ID=0x00000005 Parent=0x00000003 SizeRef=195,344 Selected=0x6D97690D
+        DockNode    ID=0x00000006 Parent=0x00000003 SizeRef=1210,344 Split=X Selected=0xF9BEF62A
+          DockNode  ID=0x0000000B Parent=0x00000006 SizeRef=602,344 Selected=0xB04EBF39
+          DockNode  ID=0x0000000C Parent=0x00000006 SizeRef=606,344 Selected=0xF9BEF62A
+      DockNode      ID=0x00000004 Parent=0x00000002 SizeRef=209,201 Selected=0x0541D7F0
 
