Made some UI changes to the New Project Menu

--- a/Editor/imgui.ini
+++ b/Editor/imgui.ini
@@ -1,6 +1,6 @@
 [Window][Editor]
 Pos=0,0
-Size=1920,1061
+Size=1920,1009
 Collapsed=0
 
 [Window][Debug##Default]
@@ -10,42 +10,42 @@ Collapsed=0
 
 [Window][Scene Hierarchy]
 Pos=8,27
-Size=284,1026
+Size=284,974
 Collapsed=0
 DockId=0x00000009,0
 
 [Window][Scene View]
 Pos=294,27
-Size=1407,680
+Size=799,628
 Collapsed=0
-DockId=0x00000007,0
+DockId=0x0000000D,0
 
 [Window][Profiler]
-Pos=1703,709
+Pos=1703,657
 Size=209,344
 Collapsed=0
 DockId=0x00000004,0
 
 [Window][Resources]
-Pos=294,709
+Pos=294,657
 Size=245,344
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][Inspector]
 Pos=1703,27
-Size=209,680
+Size=209,628
 Collapsed=0
 DockId=0x00000008,0
 
 [Window][Asset Browser]
-Pos=541,709
+Pos=541,657
 Size=552,344
 Collapsed=0
 DockId=0x0000000B,0
 
 [Window][Console]
-Pos=1095,709
+Pos=1095,657
 Size=606,344
 Collapsed=0
 DockId=0x0000000C,0
@@ -61,16 +61,24 @@ Size=132,47
 Collapsed=0
 
 [Window][New Project]
-Pos=685,292
+Pos=687,286
 Size=460,200
 Collapsed=0
 
+[Window][Game View]
+Pos=1095,27
+Size=606,628
+Collapsed=0
+DockId=0x0000000E,0
+
 [Docking][Data]
-DockSpace           ID=0x90F27762 Window=0xCB5DF48C Pos=8,27 Size=1904,1026 Split=X
+DockSpace           ID=0x90F27762 Window=0xCB5DF48C Pos=8,27 Size=1904,974 Split=X
   DockNode          ID=0x00000009 Parent=0x90F27762 SizeRef=284,1026 Selected=0x9A68760C
   DockNode          ID=0x0000000A Parent=0x90F27762 SizeRef=1618,1026 Split=Y
     DockNode        ID=0x00000001 Parent=0x0000000A SizeRef=1904,628 Split=X
-      DockNode      ID=0x00000007 Parent=0x00000001 SizeRef=1407,674 CentralNode=1 Selected=0x71B61B7A
+      DockNode      ID=0x00000007 Parent=0x00000001 SizeRef=1407,674 Split=X Selected=0x71B61B7A
+        DockNode    ID=0x0000000D Parent=0x00000007 SizeRef=799,680 CentralNode=1 Selected=0x71B61B7A
+        DockNode    ID=0x0000000E Parent=0x00000007 SizeRef=606,680 Selected=0x4CA99D21
       DockNode      ID=0x00000008 Parent=0x00000001 SizeRef=209,674 Selected=0xF02CD328
     DockNode        ID=0x00000002 Parent=0x0000000A SizeRef=1904,344 Split=X Selected=0xB04EBF39
       DockNode      ID=0x00000003 Parent=0x00000002 SizeRef=1407,201 Split=X Selected=0xB04EBF39
