Added support for multiple shaders and cleaned up the ShaderProgram class
Work Done:
1) Added a Shader class which will be used to load multiple shaders of any type now supported.
2) Cleaned and refactored the ShaderProgram class by removing almost 100 pointless lines of code and the CreateShader function can now be used to create any type of shader

--- a/Fuse/Fuse.vcxproj
+++ b/Fuse/Fuse.vcxproj
@@ -89,6 +89,7 @@ IF EXIST ..\bin\Release-windows-x86_64\Fuse\Fuse.lib\ (xcopy /Q /E /Y /I ..\bin\
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="src\Graphics\Shader\Shader.h" />
     <ClInclude Include="Vendor\Entt\entt.hpp" />
     <ClInclude Include="Vendor\GLAD\KHR\khrplatform.h" />
     <ClInclude Include="Vendor\GLAD\glad.h" />
