--- a/Editor/imgui.ini
+++ b/Editor/imgui.ini
@@ -1,57 +1,57 @@
 [Window][Editor]
 Pos=0,0
-Size=1920,1061
+Size=1920,1009
 Collapsed=0
 
 [Window][Debug##Default]
-Pos=60,60
-Size=400,400
+Pos=237,27
+Size=608,512
 Collapsed=0
 
 [Window][Scene Hierarchy]
 Pos=8,27
-Size=284,1026
+Size=283,636
 Collapsed=0
-DockId=0x00000009,0
+DockId=0x00000003,0
 
 [Window][Scene View]
-Pos=294,27
-Size=799,680
+Pos=293,27
+Size=1414,635
 Collapsed=0
-DockId=0x0000000D,0
+DockId=0x00000007,0
 
 [Window][Profiler]
-Pos=1703,709
-Size=209,344
+Pos=1708,664
+Size=204,337
+Collapsed=0
+DockId=0x0000000A,0
+
+[Window][Resources]
+Pos=8,665
+Size=283,336
 Collapsed=0
 DockId=0x00000004,0
 
-[Window][Resources]
-Pos=294,709
-Size=245,344
-Collapsed=0
-DockId=0x00000005,0
-
 [Window][Inspector]
-Pos=1599,27
-Size=313,680
+Pos=1709,27
+Size=203,635
 Collapsed=0
 DockId=0x00000008,0
 
 [Window][Asset Browser]
-Pos=541,709
-Size=552,344
+Pos=293,664
+Size=1413,337
 Collapsed=0
-DockId=0x0000000B,0
+DockId=0x00000009,0
 
 [Window][Console]
-Pos=1095,709
-Size=606,344
+Pos=293,664
+Size=1413,337
 Collapsed=0
-DockId=0x0000000C,0
+DockId=0x00000009,1
 
 [Window][Fuse Hub]
-Pos=293,204
+Pos=556,332
 Size=1042,412
 Collapsed=0
 
@@ -71,20 +71,38 @@ Size=502,680
 Collapsed=0
 DockId=0x0000000E,0
 
+[Window][Hub]
+Size=1000,550
+Collapsed=0
+
+[Window][##Toolbar]
+Pos=8,27
+Size=187,515
+Collapsed=0
+DockId=0x0000000F,0
+
+[Window][##Projects]
+Pos=197,27
+Size=795,515
+Collapsed=0
+DockId=0x00000010,0
+
 [Docking][Data]
-DockSpace           ID=0x90F27762 Window=0xCB5DF48C Pos=8,27 Size=1904,1026 Split=X
-  DockNode          ID=0x00000009 Parent=0x90F27762 SizeRef=284,1026 Selected=0x9A68760C
-  DockNode          ID=0x0000000A Parent=0x90F27762 SizeRef=1618,1026 Split=Y
-    DockNode        ID=0x00000001 Parent=0x0000000A SizeRef=1904,628 Split=X
-      DockNode      ID=0x00000007 Parent=0x00000001 SizeRef=1303,674 Split=X Selected=0x71B61B7A
-        DockNode    ID=0x0000000D Parent=0x00000007 SizeRef=799,680 CentralNode=1 Selected=0x71B61B7A
-        DockNode    ID=0x0000000E Parent=0x00000007 SizeRef=502,680 Selected=0x4CA99D21
-      DockNode      ID=0x00000008 Parent=0x00000001 SizeRef=313,674 Selected=0xF02CD328
-    DockNode        ID=0x00000002 Parent=0x0000000A SizeRef=1904,344 Split=X Selected=0xB04EBF39
-      DockNode      ID=0x00000003 Parent=0x00000002 SizeRef=1407,201 Split=X Selected=0xB04EBF39
-        DockNode    ID=0x00000005 Parent=0x00000003 SizeRef=245,344 Selected=0x6D97690D
-        DockNode    ID=0x00000006 Parent=0x00000003 SizeRef=1160,344 Split=X Selected=0xF9BEF62A
-          DockNode  ID=0x0000000B Parent=0x00000006 SizeRef=552,344 Selected=0xB04EBF39
-          DockNode  ID=0x0000000C Parent=0x00000006 SizeRef=606,344 Selected=0xF9BEF62A
-      DockNode      ID=0x00000004 Parent=0x00000002 SizeRef=209,201 Selected=0x0541D7F0
+DockSpace       ID=0x38161051 Pos=8,27 Size=984,515 Split=X
+  DockNode      ID=0x0000000F Parent=0x38161051 SizeRef=187,515 Selected=0xE79842C9
+  DockNode      ID=0x00000010 Parent=0x38161051 SizeRef=795,515 CentralNode=1 Selected=0x3C5B6058
+DockSpace       ID=0x582DCB9B Window=0xCB5DF48C Pos=8,27 Size=1904,974 Split=X
+  DockNode      ID=0x00000001 Parent=0x582DCB9B SizeRef=283,974 Split=Y Selected=0x9A68760C
+    DockNode    ID=0x00000003 Parent=0x00000001 SizeRef=283,636 Selected=0x9A68760C
+    DockNode    ID=0x00000004 Parent=0x00000001 SizeRef=283,336 Selected=0x6D97690D
+  DockNode      ID=0x00000002 Parent=0x582DCB9B SizeRef=1619,974 Split=Y
+    DockNode    ID=0x00000005 Parent=0x00000002 SizeRef=1619,635 Split=X Selected=0x71B61B7A
+      DockNode  ID=0x00000007 Parent=0x00000005 SizeRef=1414,635 CentralNode=1 Selected=0x71B61B7A
+      DockNode  ID=0x00000008 Parent=0x00000005 SizeRef=203,635 Selected=0xF02CD328
+    DockNode    ID=0x00000006 Parent=0x00000002 SizeRef=1619,337 Split=X Selected=0xF9BEF62A
+      DockNode  ID=0x00000009 Parent=0x00000006 SizeRef=1413,337 Selected=0xB04EBF39
+      DockNode  ID=0x0000000A Parent=0x00000006 SizeRef=204,337 Selected=0x0541D7F0
+DockSpace       ID=0x90F27762 Pos=8,27 Size=1904,1026 Split=X
+  DockNode      ID=0x0000000D Parent=0x90F27762 SizeRef=799,680 CentralNode=1 Selected=0x71B61B7A
+  DockNode      ID=0x0000000E Parent=0x90F27762 SizeRef=502,680 Selected=0x4CA99D21
 
