--- a/Fuse Hub/FuseHub.vcxproj
+++ b/Fuse Hub/FuseHub.vcxproj
@@ -85,6 +85,9 @@
       <Project>{F872857C-E4A9-860D-8D96-6C1079AC020F}</Project>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="src\Window\FuseHubWindow.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
