--- a/Fuse/Fuse.vcxproj.filters
+++ b/Fuse/Fuse.vcxproj.filters
@@ -1597,6 +1597,8 @@
       <Filter>src\Yaml</Filter>
     </ClInclude>
     <ClInclude Include="src\Graphics\Shader\Shader.h" />
+    <ClInclude Include="src\Initialisation\Initialisation.h" />
+    <ClInclude Include="src\Window\BaseWindow.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Vendor\GLAD\glad.c">
