--- a/Editor/Editor.vcxproj.filters
+++ b/Editor/Editor.vcxproj.filters
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
+    <Filter Include="Editor">
+      <UniqueIdentifier>{8C1A20B0-78BC-4A86-6177-5EDA4DB8D1D6}</UniqueIdentifier>
+    </Filter>
     <Filter Include="Menus">
       <UniqueIdentifier>{ADA4A90D-19B9-D1BE-E23A-751E4E0ECEEF}</UniqueIdentifier>
     </Filter>
@@ -37,15 +40,12 @@
     <Filter Include="Panels\SceneViewport">
       <UniqueIdentifier>{C539B8F0-B1C8-41BA-5AE7-55B546555260}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Editor">
-      <UniqueIdentifier>{04B9BF9D-F01B-4F42-99A1-87F885E31AC5}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="EditorWindow">
+    <Filter Include="Window">
       <UniqueIdentifier>{3DEA79DA-298C-A4B0-1247-B804FE872B01}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="src\EditorWindow\Editor.h">
+    <ClInclude Include="src\Editor\Editor.h">
       <Filter>Editor</Filter>
     </ClInclude>
     <ClInclude Include="src\Menus\NewProject\NewProject.h">
@@ -79,11 +79,11 @@
       <Filter>Panels\SceneViewport</Filter>
     </ClInclude>
     <ClInclude Include="src\Window\EditorWindow.h">
-      <Filter>EditorWindow</Filter>
+      <Filter>Window</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="src\EditorWindow\Editor.cpp">
+    <ClCompile Include="src\Editor\Editor.cpp">
       <Filter>Editor</Filter>
     </ClCompile>
     <ClCompile Include="src\Main.cpp" />
@@ -115,7 +115,7 @@
       <Filter>Panels\SceneViewport</Filter>
     </ClCompile>
     <ClCompile Include="src\Window\EditorWindow.cpp">
-      <Filter>EditorWindow</Filter>
+      <Filter>Window</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
